# TreehornCV

./: .gitignore  CMakeLists.txt  README.md  app.py
.devcontainer/: Dockerfile  devcontainer.json
_dev/: filter_plot.py  position_explore.py  quick_plot.py  target_velocity.csv  y_displacements.txt
_dev/annotation/: dirty_demo_annotations.ipynb  dirty_demo_annotations.py
_dev/blasted/: 1d_gravity_algo.ipynb
_dev/dead_ends/: algo_2d.py  test_gui.py  wave.py
_dev/lk_track/: lk_test.cpp  lk_track.py  lk_track_dev.py
_dev/math_concepts/: nsol.py  vfield.ipynb
_dev/wave_gui_demo/: wave_gui.py
_dev/web_cam_demo/: demo.py  optical_flow.py  optical_flow_hr1.py
include/: opti_vibe.h
notes/: background_sub.md  hog.md
notes/cursor/: dirty_dev_notes.md  trial.md  wave_gui.md
notes/reading/: lk_track_dev_saturday_base.py  lk_track_good_dirty_dev.py
src/: detection.py  video_utils.py
src/cpp/: opti_vibe.cpp  test.cpp
src/display/: wave_gui_simple_gain.py
src/math_concepts/: diffeq.py  vfield.py
src/python/: algo.py  free_fall.py  gui.py  gui_pendelum.py  opti_vibe.py  test.py  test_algo.py  test_gui.py
src/utils/: video_stitch.py
src/wave_gui/: wave_gui_advance_viz.py
